Feature/add test coverage (#8)
* Add columns_csv param to test equal_rowcount_where_db

* dq_issue_log as a table with new column named no_of_table_columns

* attemp #2 make dq_issue_log as model

* Add new columns: total rows of table & test id

* Standadize table_name and add table_query

* - add dq_issue_log.no_of_tables column
- add test_coverage model

* Add test coverage metrics

* Add coverage exclusion

* Fix integration test failed

* [skip ci] support bbigquery + fix tests

* Add unit tests for new macro

* Fix tests failed because of invalid leading comma

* Fix test__get_test_coverage_exclusion_sql

---------

Co-authored-by: Dat Nguyen <dat@infinitelambda>

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -12,9 +12,19 @@ model-paths: ["models"]
 
 models:
   dq_tools:
-    +enabled: false
+    01_lake:
+      +enabled: true
+    02_staging:
+      +enabled: false
+    03_mart:
+      +enabled: false
 
 vars:
+  # dq_tools_enable_store_test_results: true
   # dbt_dq_tool_schema: dq_raw
   # dbt_dq_tool_database: dq_tools
-  # dq_tools_enable_store_test_results: true
+  # dbt_dq_tool_full_refresh: false
+  # dbt_dq_tool_test_coverage_exclusion:
+  #   by_database_fqn: []
+  #   by_schema_fqn: []
+  #   by_table_fqn: []
