--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -11,11 +11,15 @@ jobs:
       max-parallel: 1
       matrix:
         adapter: ["snowflake"]
-        version: ["1.3.0", "1.4.1", "1.5.2"]
+        version: ["1.6.1"]
     container:
       image: "ghcr.io/dbt-labs/dbt-${{ matrix.adapter }}:${{ matrix.version }}"
     steps:
       - uses: actions/checkout@v3
+
+      - name: Install additional deps
+        run: |
+          pip install "dbt-metricflow[${{ matrix.adapter }}]"
 
       - name: Run integration test
         run: |
@@ -38,11 +42,15 @@ jobs:
       max-parallel: 1
       matrix:
         adapter: ["bigquery"]
-        version: ["1.3.0", "1.4.1", "1.5.3"]
+        version: ["1.6.3"]
     container:
       image: "ghcr.io/dbt-labs/dbt-${{ matrix.adapter }}:${{ matrix.version }}"
     steps:
       - uses: actions/checkout@v3
+
+      - name: Install additional deps
+        run: |
+          pip install "dbt-metricflow[${{ matrix.adapter }}]"
 
       - name: Set up credentials
         run: |
