--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,7 +1,7 @@
 name: 'dq_tools'
 config-version: 2
 version: '1.2.0'
-require-dbt-version: ">=1.3.0"
+require-dbt-version: ">=1.6.0"
 
 test-paths: ["tests"]
 target-path: "target"
@@ -10,21 +10,16 @@ macro-paths: ["macros"]
 log-path: "logs"
 model-paths: ["models"]
 
-models:
-  dq_tools:
-    01_lake:
-      +enabled: true
-    02_staging:
-      +enabled: false
-    03_mart:
-      +enabled: false
-
 vars:
   # dq_tools_enable_store_test_results: true
   # dbt_dq_tool_schema: dq_raw
   # dbt_dq_tool_database: dq_tools
   # dbt_dq_tool_full_refresh: false
+  # >> for test coverage
   # dbt_dq_tool_test_coverage_exclusion:
   #   by_database_fqn: []
   #   by_schema_fqn: []
   #   by_table_fqn: []
+  # >> for metricflow
+  # dbt_dq_tool_start_date
+  # dbt_dq_tool_end_date
