--- a/.github/workflows/ci-pr.yml
+++ b/.github/workflows/ci-pr.yml
@@ -1,8 +1,7 @@
 name: testing on pull request
 
 on:
-  pull_request:
-    branches: [ "main" ]
+  workflow_dispatch: # manual
 
 jobs:
   prometheus:
