fix: dbt profile

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,8 +30,8 @@ dq-tools-test-local = [
   {cmd = "./run_test.sh snowflake local"},
 ]
 dq-tools-test-snowflake = [
-  {cmd = "./run_test.sh snowflake"},
+  {cmd = "./run_test.sh snowflake github"},
 ]
 dq-tools-test-bigquery = [
-  {cmd = "./run_test.sh snowflake"},
+  {cmd = "./run_test.sh snowflake github"},
 ]
