--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -26,5 +26,5 @@ vars:
 
 models:
   dq_tools:
-    +database: var('dbt_dq_tool_database', target.database),
-    +schema: var('dbt_dq_tool_schema', target.schema),
+    +database: "{{ var('dbt_dq_tool_database', target.database) }}"
+    +schema: "{{ var('dbt_dq_tool_schema', target.schema) }}"
