Configure namespace for all models leveraging the existing package variables (#31)
* Update dbt_project.yml

* Updated dbt_project.yml

* Update dq_issue_log.sql

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -23,3 +23,8 @@ vars:
   # >> for metricflow
   # dbt_dq_tool_start_date
   # dbt_dq_tool_end_date
+
+models:
+  dq_tools:
+    +database: "{{ var('dbt_dq_tool_database', target.database) }}"
+    +schema: "{{ var('dbt_dq_tool_schema', target.schema) }}"
