--- a/integration_tests/models/generic_tests/data_test_equality.yml
+++ b/integration_tests/models/generic_tests/data_test_equality.yml
@@ -2,7 +2,7 @@ version: 2
 
 seeds:
   - name: data_test_equality_a
-    tests:
+    data_tests:
       - dq_tools.equality_where_db:
           compare_model: ref('data_test_equality_b')
           compare_columns: ['id']
