--- a/integration_tests/models/generic_tests/data_test_not_null.yml
+++ b/integration_tests/models/generic_tests/data_test_not_null.yml
@@ -4,9 +4,9 @@ seeds:
   - name: data_test_not_null
     columns:
       - name: id
-        tests:
+        data_tests:
           - dq_tools.not_null_where_db
       - name: name
-        tests:
+        data_tests:
           - dq_tools.not_null_where_db:
               where: id not in (-1, 2)
