--- a/integration_tests/models/generic_tests/data_test_unique.yml
+++ b/integration_tests/models/generic_tests/data_test_unique.yml
@@ -2,10 +2,10 @@ version: 2
 
 seeds:
   - name: data_test_unique
-    tests:
+    data_tests:
       - dq_tools.unique_where_db:
           column_name: concat(customer_id, location)
     columns:
       - name: id
-        tests:
+        data_tests:
           - dq_tools.unique_where_db
