--- a/integration_tests/models/source_dq_tools_test.yml
+++ b/integration_tests/models/source_dq_tools_test.yml
@@ -8,25 +8,25 @@ sources:
     schema: "{{ target.schema ~ '_' ~ var('dbt_dq_tool_schema', target.schema) }}"
     tables:
       - name: dq_issue_log
-        tests:
+        data_tests:
           - dq_tools.expression_is_true_db:
               where: coalesce(ref_column,'') != ''
               expression: coalesce(ref_table,'') != ''
         columns:
           - name: check_timestamp
-            tests:
+            data_tests:
               - dq_tools.not_null_where_db
           - name: table_name
-            tests:
+            data_tests:
               - dq_tools.not_null_where_db
           - name: dq_issue_type
-            tests:
+            data_tests:
               - dq_tools.not_null_where_db
           - name: invocation_id
-            tests:
+            data_tests:
               - dq_tools.not_null_where_db
           - name: dq_model
-            tests:
+            data_tests:
               - dq_tools.not_null_where_db
               - dq_tools.expression_is_true_db:  # singular test error should not exists
                   expression: dq_model != 'assert_intentional_error'
@@ -34,7 +34,7 @@ sources:
                   where: table_name like '%.test_failures' and coalesce(column_name,'') = ''
                   expression: dq_model not like 'dq_tools_expression_is_true_db_test_failures_1_0%'
           - name: severity
-            tests:
+            data_tests:
               - dq_tools.not_null_where_db
               - dq_tools.accepted_values_where_db:
                   values: [
@@ -42,7 +42,7 @@ sources:
                     'error'
                   ]
           - name: kpi_category
-            tests:
+            data_tests:
               - dq_tools.not_null_where_db
               - dq_tools.accepted_values_where_db:
                   values: [
@@ -55,21 +55,21 @@ sources:
                     'Accuracy',
                   ]
           - name: no_of_records
-            tests:
+            data_tests:
               - dq_tools.not_null_where_db:
                   where: coalesce(table_name,'') != ''
               - dq_tools.expression_is_true_db:
                   where: coalesce(ref_table,'') != ''
                   expression: no_of_records >= 0
           - name: no_of_records_scanned
-            tests:
+            data_tests:
               - dq_tools.not_null_where_db:
                   where: coalesce(table_name,'') != ''
               - dq_tools.expression_is_true_db:
                   where: coalesce(ref_table,'') != ''
                   expression: no_of_records >= 0
           - name: no_of_records_failed
-            tests:
+            data_tests:
               - dq_tools.not_null_where_db
               - dq_tools.expression_is_true_db:
                   expression: no_of_records_failed >= 0
@@ -77,5 +77,5 @@ sources:
                   where: lower(dq_model) like '%failure%'
                   expression: no_of_records_failed > 0
           - name: test_unique_id
-            tests:
+            data_tests:
               - dq_tools.not_null_where_db
