--- a/integration_tests/models/artifacts/test/utilities/column/column.yml
+++ b/integration_tests/models/artifacts/test/utilities/column/column.yml
@@ -2,10 +2,10 @@ version: 2
 
 models:
   - name: test__get_column_name
-    tests:
+    data_tests:
       - dq_tools.expression_is_true_db:
           expression: actual = expected
   - name: test__get_to_column_name
-    tests:
+    data_tests:
       - dq_tools.expression_is_true_db:
           expression: actual = expected
