--- a/integration_tests/models/generic_tests/data_test_equal_rowcount.yml
+++ b/integration_tests/models/generic_tests/data_test_equal_rowcount.yml
@@ -2,7 +2,7 @@ version: 2
 
 seeds:
   - name: data_test_equal_rowcount_a
-    tests:
+    data_tests:
       - dq_tools.equal_rowcount_where_db:
           compare_model: ref('data_test_equal_rowcount_b')
       - dq_tools.equal_rowcount_where_db:
@@ -14,7 +14,7 @@ seeds:
           compare_model: (select 1 as id)
 
   - name: data_test_equal_rowcount_b
-    tests:
+    data_tests:
       - dq_tools.equal_rowcount_where_db:
           where: id = -1
           compare_model: (select 1 as id)
