added description for macro __get_test_model_materialization

--- a/macros/artifacts/test/utilities/general/_general.yml
+++ b/macros/artifacts/test/utilities/general/_general.yml
@@ -110,3 +110,7 @@ macros:
       ```
       (select * from {database}.{schema}.{table} where {where}) as dbt_subquery
       ```
+  
+  - name: __get_test_model_materialization
+    description: |
+      Return the materialization type of the model being tested (eg: table, view, ephemeral etc).
