Added integration tests for __get_test_description

--- a/integration_tests/models/artifacts/test/utilities/_general/_general.yml
+++ b/integration_tests/models/artifacts/test/utilities/_general/_general.yml
@@ -23,3 +23,8 @@ models:
     data_tests:
       - dq_tools.expression_is_true_db:
           expression: actual = expected
+  - name: test__get_test_description
+    data_tests:
+      - dq_tools.expression_is_true_db:
+          expression: actual = expected
+  
